[package]
name = "oberon"
authors = ["Michael Lodder <redmike7@gmail.com>"]
description = """
Oberon is a multi-factor zero-knowledge capable token
without requiring email, SMS, or authenticator apps.
The proof of token validity is only 96 bytes while the token itself is only 48 bytes.
"""
edition = "2018"
keywords = ["zero-knowledge", "cryptography", "authentication"]
categories = ["no-std", "wasm", "network-programming", "cryptography", "authentication"]
homepage = "https://github.com/mikelodder7/oberon"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mikelodder7/oberon"
version = "1.0.0-pre2"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true

[features]
default = []
alloc = ["bls12_381_plus/alloc", "digest/alloc"]
std = ["digest/std", "sha3/std"]
wasm = ["getrandom", "rand", "wasm-bindgen"]

[dependencies]
bls12_381_plus = "0.4"
digest = { version = "0.9", default-features = false }
ff = "0.9"
getrandom = { version = "0.2", features = ["js"], optional = true }
group = "0.9"
rand_core = "0.6"
rand = { version = "0.8", default-feature = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
sha3 = { version = "0.9", default-features = false }
subtle = "2.4"
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"], optional = true }
zeroize = { version = "1.3", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"