[package]
name = "nodeoberon"
version = "1.1.1"
description = "A succinct ZKP protocol for authentication"
authors = ["Michael Lodder <redmike7@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
oberon = { version = "1.1.1", path = "../rust" }
rand = "0.8"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
