[package]
name = "nodeoberon"
version = "2.0.0"
description = "A succinct ZKP protocol for authentication"
authors = ["Michael Lodder <redmike7@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
oberon = { path = "../rust" }
rand = "0.8"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
