[package]
name = "oberon"
authors = ["Michael Lodder <redmike7@gmail.com>"]
description = """
Oberon is a multi-factor zero-knowledge capable token
without requiring email, SMS, or authenticator apps.
The proof of token validity is only 96 bytes while the token itself is only 48 bytes.
"""
edition = "2021"
keywords = ["zero-knowledge", "cryptography", "authentication"]
categories = ["no-std", "wasm", "network-programming", "cryptography", "authentication"]
homepage = "https://github.com/mikelodder7/oberon"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/mikelodder7/oberon"
version = "2.2.1"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = false
lto = true
opt-level = 3

[features]
default = ["rust"]
alloc = ["bls12_381_plus/alloc", "digest/alloc"]
ffi = ["ffi-support", "lazy_static", "rand/default", "std"]
php = ["ext-php-rs", "rand/default", "std"]
python = ["pyo3", "rand/default", "std"]
rust = ["bls12_381_plus"]
std = ["blstrs_plus", "digest/std", "sha3/std"]
wasm = ["getrandom", "rand/default", "wasm-bindgen", "serde_json", "std"]

[dependencies]
bls12_381_plus = { version = "^0.8.4", optional = true }
blstrs_plus = { version = "^0.8.4", features = ["portable"], optional = true }
digest = { version = "0.10", default-features = false }
ext-php-rs = { version = "0.10.0", optional = true }
ffi-support = { version = "0.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
lazy_static = { version = "1.4", optional = true }
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
rand_core = "0.6"
rand = { version = "0.8", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
subtle = "2.4"
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"], optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.5"
hex = "0.4"
kmeans = "0.2"
rand = "0.8"
rand_chacha = "0.3"
rand_xorshift = "0.3"
random_tester = { version = "0.1", path = "../../random_tester" }
serde_json = "1.0"
serde_cbor = "0.11"
serde_bare = "0.5"

[[bench]]
name = "random"
harness = false

[[example]]
name = "random_test"
path = "examples/random_test.rs"
