[package]
name = "nodeoberon"
version = "1.1.1"
authors = ["Michael Lodder <redmike7@gmail.com>"]
license = "Apache-2"
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "nodeoberon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10"

[dependencies]
neon = "0.10"
oberon = { version = "1.1.1", path = "../../rust" }
rand = "0.8"