[package]
name = "nodeoberon"
version = "1.1.1"
description = "A succint ZKP protocol for authentication"
authors = ["Michael Lodder <redmike7@gmail.com>"]
license = "Apache-2"
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "nodeoberon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10"

[dependencies]
neon = { version = "0.10", default-features = false, features = ["napi-5"]  }
oberon = { version = "1.1.1", path = "../../rust" }
rand = "0.8"